--- a/orario/index.css
+++ b/orario/index.css
@@ -47,7 +47,7 @@
 }.c {
   height: 100vh;
   width: var(--a);
-
+  flex-direction: column;
   flex: 0 0 var(--a);
   scroll-snap-align: center;
 }.center,.c,.r,.ri,.m,.o {
@@ -70,7 +70,7 @@
   color: white;
 }.o {
   width: 100px;
-}.m {
+}.m,.g,.sp {
   flex: 1;
 }* {
   font-family: 'SF';
@@ -83,4 +83,8 @@
   position: absolute;
   z-index: -1;
   top: 68px;
+}.g{
+  margin-top: 60px;
+  color: rgba(0, 0, 0, 0.478);
+  display: flex;
 }
