--- a/orario/index.css
+++ b/orario/index.css
@@ -27,6 +27,7 @@
   scale: 0.8;
   transition: scale 0.5s ease-out;
   overflow: hidden;
+  pointer-events: none;
 }#mainbox {
   display: flex;
   overflow-x: scroll;
