--- a/calendario/index.css
+++ b/calendario/index.css
@@ -26,6 +26,7 @@
   --rosso: rgb(163, 16, 16);
   --scritte: rgba(0, 0, 0, 0.821);
   --ciliegia: #991708;
+  --blu2: #1a28c3d2;
 }
 
 
@@ -67,10 +68,6 @@ body {
   font-size: 25px;
 }
 
-.contenitore-impegni {
-  padding: 15px;
-
-}
 #cb{
   overflow-y: scroll;
   flex: 1;
@@ -100,6 +97,9 @@ body {
   box-shadow: 5px 5px 7px #e8e8f0,
     -5px -5px 7px #ffffff;
 }
+.bb:last-of-type{
+  margin-bottom: 30px;
+}
 
 .sfondo-gradiente {
   position: fixed;
@@ -113,6 +113,21 @@ body {
   z-index: 2;
 
 }
+.edit{
+  flex: 0 0 100px;
+  scroll-snap-align: end;
+  background-color: var(--blu2);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 18px;
+  border-radius: 18px 0 0 18px;
+  cursor: pointer;
+  user-select: none;
+}
+
 
 .delete {
   flex: 0 0 100px;
@@ -125,11 +140,14 @@ body {
   color: white;
   font-size: 18px;
   border-radius: 0 18px 18px 0;
+  cursor: pointer;
+  user-select: none;
 }
 
 .nota {
   width: 80vw;
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: rgb(247, 247, 250);
+  color: rgb(247, 247, 250);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -138,6 +156,8 @@ body {
 }
 
 .nota.open {
+  background-color: #EFEFF2;
+  color: #9E9EA0;
   height: 50px;
 }
 
@@ -200,15 +220,13 @@ body {
   color: white;
 }
 
-.contenitore-impegno-singolo:hover {
-  scale: 1.05;
-}
 
 #contimpegni {
   font-family: 'SF';
   color: rgba(0, 0, 0, 0.349);
+  min-height: max-content;
+  padding: 15px;
 }
-
 .start {
 
   width: 40px;
@@ -340,24 +358,26 @@ img {
   grid-template-rows: 30px 40px 50px 40px 50px min-content 40px 50px 40px 50px 1fr 60px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   height: 70%;
   width: 70%;
   background-color: rgb(247, 247, 255);
   border-radius: 18px;
   z-index: 3;
-  scale: 0;
   box-shadow: 0px 0px 20px #00000018;
   font-family: 'Galano';
   color: rgb(22, 22, 73);
   font-size: 25px;
   overflow-y: auto;
+  opacity: 0;
+  scale: 0;
+  transform: translate(-50%, 0%);
+  transition:  opacity 0.2s ease-out, transform 0.2s ease-out;
 }
 
 .contaggiunta.active {
+  transform: translate(-50%, -50%);
   scale: 1;
-  animation: alza 1.5s ease-out 0.3s backwards;
-
+  opacity: 1;
 }
 
 .contcose {
