--- a/blockblastsolution/index.css
+++ b/blockblastsolution/index.css
@@ -23,6 +23,7 @@
     --primary: #2b91c5;
     --secondary: #12597d;
     --accent: #0e79af;
+    --warning: #c5952b;
 }
 
 html, body {
@@ -72,12 +73,20 @@ body {
 
 #buttons {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     gap: clamp(10px, 3vw, 30px);
     grid-row: 6;
+    align-items: center;
 }
 
-#back, #next {
+/* Aggiungi un container per i bottoni di navigazione */
+#buttons > div {
+    display: flex;
+    gap: clamp(10px, 3vw, 30px);
+    margin-bottom: clamp(15px, 4vw, 30px);
+}
+
+#back, #next, #reset {
     width: clamp(100px, 30vw, 150px);
     height: clamp(35px, 10vw, 45px);
     font-size: clamp(14px, 4vw, 16px);
@@ -86,6 +95,10 @@ body {
     border-radius: 18px;
     color: var(--text);
     cursor: pointer;
+}
+
+#reset {
+    background-color: var(--warning);
 }
 
 .cell {
