--- a/15Game/index.css
+++ b/15Game/index.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'SF';
-  src: url(https://fedespada.com/font/SF-Pro-Display-Bold.ttf);
+  src: url(https://fedespads.github.io/SitoPrincipale/font/SF-Pro-Display-Bold.ttf);
 }
 @font-face {
   font-family: 'Bebas';
-  src: url(https://fedespada.com/font/Bebas.ttf);
+  src: url(https://fedespads.github.io/SitoPrincipale/font/Bebas.ttf);
 }
 :root{
   --sg:4;
@@ -96,4 +96,5 @@ body{
 #plus{
   padding-bottom: 3px;
   height: 47px;
+
 }
