--- a/2048/index.css
+++ b/2048/index.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'SF';
-  src: url(https://fedespada.com/font/SF-Pro-Display-Bold.ttf);
+  src: url(https://fedespads.github.io/SitoPrincipale/font/SF-Pro-Display-Bold.ttf);
 }
 @font-face {
   font-family: 'Bebas';
-  src: url(https://fedespada.com/font/Bebas.ttf);
+  src: url(https://fedespads.github.io/SitoPrincipale/font/Bebas.ttf);
 }
 
 body {
@@ -317,4 +317,5 @@ body {
 
 .try-again-btn:active {
   transform: scale(0.95);
+
 }
